Adicionando Metricas